IGNITE-20777 Fix IllegalAccessException on Java 17 (at least)
Signed-off-by: ibessonov <bessonov.ip@gmail.com>